[gd_scene load_steps=7 format=3 uid="uid://3fwy20m0xgjj"]

[ext_resource type="Script" uid="uid://crdcxremqtrvi" path="res://main.gd" id="1_vvd4v"]
[ext_resource type="Script" uid="uid://d3q6c1bl67eu5" path="res://addons/gopotify/client.gd" id="2_3b2sk"]
[ext_resource type="PackedScene" uid="uid://chx3coy176ja1" path="res://song_changed.tscn" id="3_pdo4c"]

[sub_resource type="Animation" id="Animation_h2yge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Window/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.309804)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Window/Control/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0xm2m"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Window/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Window/Control/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1bvp3"]
_data = {
&"RESET": SubResource("Animation_h2yge"),
&"fade": SubResource("Animation_0xm2m")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_vvd4v")

[node name="Gopotify" type="HTTPRequest" parent="."]
script = ExtResource("2_3b2sk")
metadata/_custom_type_script = "uid://d3q6c1bl67eu5"

[node name="Window" type="Window" parent="."]
transparent_bg = true
title = "SongDisplay"
size = Vector2i(2560, 1440)
borderless = true
always_on_top = true
transparent = true
unfocusable = true

[node name="Control" parent="Window" instance=ExtResource("3_pdo4c")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1bvp3")
}
speed_scale = 0.2

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
